# ChurnCase

./: .gitignore  README.md  pyproject.toml  requirements.txt
automations/: data_processing.py  folders_creation.py  frontend_streamlit.py  prediction_model.py
data/d02_intermediate/: X_test.csv  X_train.csv  telco_customer_churn_v2.xlsx  y_test.csv  y_train.csv
data/d04_models/: score_models.csv
model/: weights_classes.txt  xgb_model.pkl  xgboost_params.txt
notebooks/: n00_data_preparation.ipynb  n02_data_split.ipynb  n03_feature_engineering.ipynb  n04_check_combinations.ipynb  n04_pipeline.ipynb  n05_test_model.ipynb  n05_text_interpretability.ipynb  n06_model_validation.ipynb
preprocessing/: boxcox_transformer_model.pkl  kmeans_model.pkl  log_transformer_model.pkl  preprocessing.pkl  rbf_transformer_model.pkl
streamlit/: s00_telco_page.py
