[project]
name = "churncase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib==3.7.1",
    "numpy==1.24.3",
    "pandas==1.5.3",
    "plotly==5.9.0",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
    "streamlit==1.26.0",
    "xgboost==2.0.0",
]
